--- a/style.css
+++ b/style.css
@@ -12,21 +12,69 @@ header {
 }
 
 section {
-    background-color: #8dc3c5;
     border: 1px solid black;
     margin: auto 0;
+    padding: 1%;
     padding-top: 2em;
 	display: block;
 }
-
-article {
-    border: 2px solid red;
+.picture-8 {
+position: relative;
+margin: 0 auto;
+width: 1200px;
+}
+.titul-p-8 {
+    font-family: nyt-cheltenham, times new roman, times, serif;
+}
+h2 {
+    display: block;
+    font-size: 1.5em;
+    margin-block-start: 0.83em;
+    margin-block-end: 0.83em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+}
+.picture-8 > p {
+    color: #666;
+    font-size: 18px;
+}
+.picture-8 img {
+    width: 100%;
+}
+.top-line-p-8 {
+    position: absolute;
+    top: 32%;
+}
+.top-line-p-8 div {
+    float: left;
+    width: 24%;
+    padding-top: 2%;
+    padding-right: 1%;
+    font-family: nyt-franklin, arial, helvetica, sans-serif;
+    font-size: 14px;
+}
+.picture-8 span {
+    font-weight: bold;
+    margin-right: 0.8em;
+}
+.second-line-p-8 {
+    position: absolute;
+    top: 74%;
 }
 
-.one {
-    border: 2px solid red;
+.second-line-p-8 div {
+    float: left;
+    width: 24%;
+    padding-right: 1%;
+    font-family: nyt-franklin, arial, helvetica, sans-serif;
+    font-size: 14px;
 }
-
+.autors-p-8 {
+    clear: both;
+    margin-top: 25px;
+    color: #333;
+}
 footer {
     background-color: #2e8b57;
     border: 1px solid green;
